--- a/src/app/components/pos-configuration/customers/customers.component.html
+++ b/src/app/components/pos-configuration/customers/customers.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="card">
-    <div class="card-header d-flex justify-content-between align-items-center">
+    <div class="card-header d-flex justify-content-between align-items-center sticky-header">
       <h5 class="mb-0">Customers</h5>
       <!-- <button class="btn btn-primary" (click)="addCustomer()">Add Customer</button> -->
     </div>
@@ -14,11 +14,12 @@
         </div>
 
         <!-- Table -->
-        <div *ngIf="!loading" class="table-responsive">
+        <div *ngIf="!loading" class="table-responsive table-container">
           <table class="table table-bordered table-hover text-nowrap">
-            <thead class="table-light">
+            <thead class="table-light sticky-header">
               <tr>
                 <th scope="col">Id</th>
+                <th scope="col">Unique Id</th>
                 <th scope="col">Name</th>
                 <th scope="col">Email</th>
                 <th scope="col">Phone</th>
@@ -30,7 +31,8 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let element of dataSource">
+              <tr *ngFor="let element of paginatedDataSource">
+                <td>{{ element.id }}</td>
                 <td>{{ element.uniqueId }}</td>
                 <td>{{ element.name }}</td>
                 <td>{{ element.email }}</td>
@@ -54,12 +56,61 @@
                   </button>
                 </td>
               </tr>
-              <tr *ngIf="!dataSource.length">
+              <tr *ngIf="!paginatedDataSource.length">
                 <td colspan="9" class="text-center">No Records Found</td>
               </tr>
             </tbody>
           </table>
+      
         </div>
+      <!-- Pagination Info -->
+      <div class="d-flex justify-content-between align-items-center mt-3 card-footer sticky-footer">
+        <div>
+          Showing {{ currentStartIndex + 1 }} to {{ currentEndIndex }} of {{ totalCount }} 
+        </div>
+        <nav *ngIf="totalCount > pageSize" aria-label="Page navigation">
+          <ul class="pagination justify-content-center">
+            <!-- Previous Button -->
+            <li class="page-item" [class.disabled]="currentPage === 0">
+              <button class="page-link" (click)="changePage(currentPage - 1)">Previous</button>
+            </li>
+        
+            <!-- First Page -->
+            <li class="page-item" *ngIf="visiblePages[0] !== 0">
+              <button class="page-link" (click)="changePage(0)">1</button>
+            </li>
+        
+            <!-- Ellipsis for Skipped Pages -->
+            <li class="page-item disabled" *ngIf="visiblePages[0] > 1">
+              <span class="page-link">...</span>
+            </li>
+        
+            <!-- Visible Pages -->
+            <li
+              class="page-item"
+              *ngFor="let page of visiblePages"
+              [class.active]="page === currentPage"
+            >
+              <button class="page-link" (click)="changePage(page)">{{ page + 1 }}</button>
+            </li>
+        
+            <!-- Ellipsis for Skipped Pages -->
+            <li class="page-item disabled" *ngIf="visiblePages[visiblePages.length - 1] < totalPages - 2">
+              <span class="page-link">...</span>
+            </li>
+        
+            <!-- Last Page -->
+            <li class="page-item" *ngIf="visiblePages[visiblePages.length - 1] !== totalPages - 1">
+              <button class="page-link" (click)="changePage(totalPages - 1)">{{ totalPages }}</button>
+            </li>
+        
+            <!-- Next Button -->
+            <li class="page-item" [class.disabled]="currentPage === totalPages - 1">
+              <button class="page-link" (click)="changePage(currentPage + 1)">Next</button>
+            </li>
+          </ul>
+        </nav>
+      </div>
       </div>
     </div>
   </div>
