--- a/src/app/components/pos-configuration/modals/add-user-dialog/add-user-dialog.component.scss
+++ b/src/app/components/pos-configuration/modals/add-user-dialog/add-user-dialog.component.scss
@@ -1,22 +1,11 @@
-.card {
-    border-radius: 8px;
-  }
-  
-  .card-header {
-    font-size: 1.25rem;
-    font-weight: bold;
-  }
-  
-  button {
-    min-width: 100px;
-  }
-  
-  button.btn-primary {
-    background-color: #007bff; /* Blue color for Save button */
-    border-color: #007bff;
-  }
-  
-  button.btn-primary:hover {
-    background-color: #0056b3; /* Darker blue on hover */
-    border-color: #004085;
-  }
+.gap-24{
+  gap: 24px
+}
+.card{
+  margin: 0px !important;
+}
+.modal-btn{
+  display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+}
