--- a/src/app/components/pos-configuration/modals/item-dialog/item-dialog.component.html
+++ b/src/app/components/pos-configuration/modals/item-dialog/item-dialog.component.html
@@ -5,50 +5,38 @@
     </div>
     <div class="card-body">
       <!-- Main Form Fields -->
-      <div class="row g-3">
+      <div class="row">
         <!-- Item Name -->
         <div class="col-md-6">
-          <label for="name" class="form-label">Item Name</label>
-          <input
-            type="text"
-            id="name"
-            class="form-control"
-            formControlName="name"
-            placeholder="Enter Item Name"
-          />
+          <mat-form-field class="flex-1 fs-16" appearance="outline">
+            <mat-label>Item Name</mat-label>
+            <input matInput type="text" formControlName="name" placeholder="Item Name" />
+          </mat-form-field>
         </div>
 
         <!-- Printer -->
         <div class="col-md-6">
-          <label for="printer" class="form-label">Printer</label>
-          <select
-            id="printer"
-            class="form-select"
-            formControlName="printer"
-          >
-            <option *ngFor="let print of printerList" [value]="print.id">
-              {{ print.name }}
-            </option>
-          </select>
+          <mat-form-field class="flex-1 fs-16" appearance="outline">
+            <mat-label>Printer</mat-label>
+            <mat-select formControlName="printer">
+              <mat-option *ngFor="let print of printerList" [value]="print.id">{{ print.name }}</mat-option>
+            </mat-select>
+          </mat-form-field> 
         </div>
 
         <!-- Select Category -->
         <div class="col-md-6">
-          <label for="categoryId" class="form-label">Select Category</label>
-          <select
-            id="categoryId"
-            class="form-select"
-            formControlName="categoryId"
-          >
-            <option *ngFor="let cat of categoryList" [value]="cat.id">
-              {{ cat.name }}
-            </option>
-          </select>
+          <mat-form-field class="flex-1 fs-16" appearance="outline">
+            <mat-label>Select Category</mat-label>
+            <mat-select formControlName="categoryId">
+              <mat-option *ngFor="let cat of categoryList" [value]="cat.id">{{ cat.name }}</mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
       </div>
 
       <!-- Dynamic Transaction Type and Price Rows -->
-      <div class="row g-3 mt-3" formArrayName="price">
+      <div class="row mt-3" formArrayName="price">
         <div
           class="col-md-12 d-flex align-items-center mb-2"
           *ngFor="let trans of price.controls; let i = index"
@@ -56,43 +44,29 @@
         >
           <!-- Transaction Type -->
           <div class="flex-grow-1 me-2">
-            <label for="transactionType{{ i }}" class="form-label">Transaction Type</label>
-            <select
-              id="transactionType{{ i }}"
-              class="form-select"
-              formControlName="platFormId"
-              (change)="onTransactionTypeSelect(i, $event)"
-            >
-              <option *ngFor="let type of transactionTypes" [value]="type.id">
-                {{ type.name }}
-              </option>
-            </select>
+            <mat-form-field appearance="outline" class="transaction-select">
+              <mat-label>Transaction Type</mat-label>
+              <mat-select formControlName="platFormId" (selectionChange)="addItemForm.get('price')?.updateValueAndValidity()"  (selectionChange)="onTransactionTypeSelect(i, $event.value)">
+                <mat-option *ngFor="let type of transactionTypes" [value]="type.id">{{ type.name }}</mat-option>
+              </mat-select>
+            </mat-form-field>
           </div>
 
           <!-- Price -->
           <div class="flex-grow-1 me-2">
-            <label for="price{{ i }}" class="form-label">Price</label>
-            <input
-              type="number"
-              id="price{{ i }}"
-              class="form-control"
-              formControlName="price"
-              placeholder="Enter Price"
-            />
+            <mat-form-field appearance="outline" class="transaction-price">
+              <mat-label>Price</mat-label>
+              <input matInput type="number" formControlName="price" placeholder="Enter Price" />
+            </mat-form-field>
           </div>
 
           <!-- Remove Button -->
           <div class="flex-grow-1 me-2">
             <label class="form-label"></label>
             
-          <button
-            type="button"
-            class="btn btn-danger btn-sm"
-            (click)="removeTransactionRow(i)"
-            *ngIf="price.length > 1"
-          >
-            <i class="bi bi-dash-circle"></i>
-          </button>
+            <button mat-icon-button color="warn" (click)="removeTransactionRow(i)" *ngIf="price.length > 1">
+              <mat-icon>remove_circle</mat-icon>
+            </button>
           </div>
         </div>
           <!-- <button
